# EOS

./: .gitignore  CMakeLists.txt  cmake.md  count_lines.bat  count_lines.py  deploy.bat  graphic.txt  main.cpp  pythonthread.cpp  pythonthread.h  readme.md  rename.py  toupcam.txt  version
component/: CMakeLists.txt
component/include/: alias.h  constant.h  fields.h  public.h  utilities.h  utilities.h~
component/include/datastructure/: buttongroup.h  combodelegate.h  datastructure.h  eventloop.h  gradienthiddenanimation.h  imagedelegate.h  imagetransformthread.h  linedelegate.h  listwidgetitem.h  sqlquerymodel.h  sqltablemodel.h  standarditemmodel.h  textdelegate.h  timerbroadcastthread.h
component/include/socket/: assemble.h  assemblecontrol.h  parse.h  parsecontrol.h  requestqueuethread.h  socket.h  tcpsocket.h
component/include/tool/: blockingqueue.h  configreadwrite.h  cpumemorymonitor.h  inireadwrite.h  jsonreadwrite.h  log.h  mysqlreadwrite.h  recordimage.h  sqlitereadwrite.h  sqlreadwrite.h  sqlstatements.h  tool.h
component/include/widgets/: channelpicture.h  checkbox.h  circle.h  colorbutton.h  combobox.h  disksizetable.h  dockwidget.h  doubleslider.h  gradienthiddenwidget.h  graphicspixitem.h  graphicsview.h  gridpicturecanvas.h  groupbox.h  groupinfo.h  inscribedrect.h  label.h  labeltriangle.h  lensbox.h  lineedit.h  pattern.h  photocanvas.h  photocanvastriangle.h  photographic.h  picture.h  progressbar.h  pushbutton.h  pushgroup.h  radiobutton.h  radiogroup.h  roundbutton.h  singlepicturecanvas.h  slider.h  sliderx.h  socketpanel.h  spinbox.h  splitter.h  stackwidget.h  tableview.h  textedit.h  trianglemove.h  (+9 more)
component/src/datastructure/: buttongroup.cpp  combodelegate.cpp  eventloop.cpp  gradienthiddenanimation.cpp  imagedelegate.cpp  imagetransformthread.cpp  linedelegate.cpp  listwidgetitem.cpp  sqlquerymodel.cpp  sqltablemodel.cpp  standarditemmodel.cpp  textdelegate.cpp  timerbroadcastthread.cpp
component/src/socket/: assemble.cpp  assemblecontrol.cpp  parse.cpp  parsecontrol.cpp  requestqueuethread.cpp  tcpsocket.cpp
component/src/tool/: configreadwrite.cpp  cpumemorymonitor.cpp  inireadwrite.cpp  jsonreadwrite.cpp  log.cpp  mysqlreadwrite.cpp  recordimage.cpp  sqlitereadwrite.cpp  sqlreadwrite.cpp
component/src/widgets/: channelpicture.cpp  checkbox.cpp  circle.cpp  colorbutton.cpp  combobox.cpp  disksizetable.cpp  dockwidget.cpp  doubleslider.cpp  gradienthiddenwidget.cpp  graphicspixitem.cpp  graphicsview.cpp  gridpicturecanvas.cpp  groupbox.cpp  groupinfo.cpp  inscribedrect.cpp  label.cpp  labeltriangle.cpp  lineedit.cpp  pattern.cpp  photocanvas.cpp  photocanvastriangle.cpp  photographic.cpp  picture.cpp  picturecanvas.cpp  previewpattern.cpp  progressbar.cpp  protocolpattern.cpp  pushbutton.cpp  pushgroup.cpp  radiobutton.cpp  radiogroup.cpp  roundbutton.cpp  slider.cpp  sliderx.cpp  socketpanel.cpp  spinbox.cpp  splitter.cpp  stackwidget.cpp  tableview.cpp  textedit.cpp  (+9 more)
interface/: CMakeLists.txt
interface/include/: interface.h  window.h
interface/include/data/: data.h  datagrid.h  dataimage.h  datapattern.h  datatable.h  datatablemodel.h  expertable.h  patterntable.h  timetable.h
interface/include/mainwindow/: appselect.h  mainwindow.h  navigbar.h  pythonprocess.h  pythonthread.h  startpythonx.h  window.h  window.h~
interface/include/opencv2/: aruco.hpp  barcode.hpp  ccalib.hpp  core_detect.hpp  cvconfig.h  dnn.hpp  face.hpp  gapi.hpp  imgproc.hpp  mcc.hpp  ml.hpp  plot.hpp  quality.hpp  rapid.hpp  stereo.hpp  surface_matching.hpp  ximgproc.hpp  xobjdetect.hpp  xphoto.hpp
interface/include/opencv2/aruco/: charuco.hpp  dictionary.hpp
interface/include/opencv2/core/: affine.hpp  bindings_utils.hpp  quaternion.hpp  simd_intrinsics.hpp
interface/include/opencv2/datasets/: ar_hmdb.hpp  ar_sports.hpp  dataset.hpp  fr_adience.hpp  fr_lfw.hpp  gr_chalearn.hpp  gr_skig.hpp  hpe_parse.hpp  (+22 more)
interface/include/preview/: autofocus.h  camerabox.h  cameramode.h  cameratool.h  canvasmode.h  channelbox.h  channelboxx.h  channelnotifier.h  expertool.h  focusbox.h  focustool.h  historybox.h  lensbox.h  mainwindow.h  objectivebox.h  preview.h  previewpattern.h  previewphotocanvas.h  previewtool.h  recordbox.h  savebox.h  skipbox.h  slidepattern.h  summarydialog.h  summarypanel.h  timebox.h  toupcamera.h  viewmode.h  viewpattern.h  viewselect.h  wellbox.h  wellpattern.h  wellview.h  window.h  zstackbox.h
interface/include/protocol/: protocolpattern.h
interface/include/setting/: objectivesetting.h  setting.h  settingnotifier.h  wellsetting.h
interface/include/window/: appselect.h  camerabox.h  cameratool.h  channelbox.h  mainwindow.h  navigbar.h  preview.h  previewtool.h  wellbox.h  window.h
interface/src/data/: data.cpp  datagrid.cpp  dataimage.cpp  datapattern.cpp  datatable.cpp  datatablemodel.cpp  expertable.cpp  patterntable.cpp  timetable.cpp
interface/src/mainwindow/: appselect.cpp  mainwindow.cpp  navigbar.cpp  pythonprocess.cpp  pythonthread.cpp  startpython.cpp  startpythonx.cpp
interface/src/preview/: appselect.cpp  autofocus.cpp  camerabox.cpp  cameramode.cpp  cameratool.cpp  canvasmode.cpp  channelbox.cpp  channelboxx.cpp  channelnotifier.cpp  expertool.cpp  focusbox.cpp  focustool.cpp  historybox.cpp  lensbox.cpp  mainwindow.cpp  objectivebox.cpp  preview.cpp  preview_camera.cpp  preview_tcp.cpp  preview_updateui.cpp  previewpattern.cpp  previewphotocanvas.cpp  previewphotocanvas_geometry.cpp  previewphotocanvas_mouse.cpp  previewphotocanvas_other.cpp  previewphotocanvas_paint.cpp  previewtool.cpp  recordbox.cpp  savebox.cpp  slidepattern.cpp  summarydialog.cpp  summarypanel.cpp  timebox.cpp  toupcamera.cpp  viewmode.cpp  viewpattern.cpp  viewpattern_geometry.cpp  viewpattern_mouse.cpp  viewpattern_paint.cpp  viewselect.cpp  (+7 more)
interface/src/protocol/: protocolpattern.cpp
interface/src/setting/: objectivesetting.cpp  setting.cpp  settingnotifier.cpp  wellsetting.cpp
interface/src/window/: appselect.cpp  camerabox.cpp  cameratool.cpp  channelbox.cpp  mainwindow.cpp  navigbar.cpp  preview.cpp  previewtool.cpp  wellbox.cpp
(+192 files in other folders)
